Fix horizontal scroll in models list modal

--- a/src/AppAdminBundle/Resources/public/sass/_adminMain.scss
+++ b/src/AppAdminBundle/Resources/public/sass/_adminMain.scss
@@ -412,3 +412,11 @@ input#image_upload_file {
         visibility: visible;
     }
 }
+.modal-list-container {
+    width: 100%;
+}
+.modal-list-content {
+    .box {
+        overflow-x: scroll;
+    }
+}
